--- a/css/master.css
+++ b/css/master.css
@@ -92,7 +92,7 @@ body{
   -webkit-justify-content:center;
   align-items: center;
   -webkit-align-items: center;
-  /*display: none;*/
+  display: none;
 }
 #salsaWrap{
   position: relative;
