--- a/css/productosSot.css
+++ b/css/productosSot.css
@@ -187,10 +187,11 @@
 #transition{
   position: fixed;
   width: 100vw;
-  height: 100vh;
+  height: 110vh;
   z-index: 9000;
 }
 #transition>svg{
+  height: 100%;
   opacity: 0;
 }
 #transition>img{
