--- a/css/master.css
+++ b/css/master.css
@@ -268,3 +268,113 @@ nav{
   height: 167px;
   opacity: 0;
 }
+
+
+.footslider>div{
+  height: 100%;
+  width: 100%;
+display: -webkit-box;
+display: -ms-flexbox;
+display: -webkit-flex;
+display: flex;
+flex-direction: row;
+-webkit-flex-direction:row;
+justify-content:center;
+-webkit-justify-content:center;
+align-items: center;
+-webkit-align-items: center;
+}
+.footslider>div>a{
+  width: 60px;
+  height: 60px;
+}
+#sliderIndividualWrap{
+  width: 70vw;
+  height: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  -webkit-flex-direction:row;
+  justify-content:center;
+  -webkit-justify-content:center;
+  align-items: center;
+  -webkit-align-items: center;
+}
+#sliderIndividualWrap>li{
+  height: 100%;
+  display: -webkit-box;
+display: -ms-flexbox;
+display: -webkit-flex;
+display: flex;
+flex-direction: column;
+-webkit-flex-direction:column;
+justify-content:center;
+-webkit-justify-content:center;
+align-items: center;
+-webkit-align-items: center;
+}
+#sliderIndividualWrap>li>img{
+  width: 90%;
+}
+
+.reflect{
+  margin-left: 20px;
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+#middle{
+  cursor: pointer;
+  transition: all 0.5s ease-out;
+}
+
+#captionSliderInd{
+  margin-top: 30px;
+  color: #fff;
+  transition: all 0.5s ease-out;
+}
+
+
+#zoomWraper{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0,0,0,0.7);
+  z-index: 10900;
+
+  display: none;
+  opacity: 0;
+
+  -webkit-transition: opacity 0.5s ease-out;
+  -moz-transition: opacity 0.5s ease-out;
+  -ms-transition: opacity 0.5s ease-out;
+  -o-transition: opacity 0.5s ease-out;
+  transition: opacity 0.5s ease-out;
+}
+#zoomWraper>a{
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top:30px;
+  right: 30px;
+}
+#zoomWraper>a:hover{
+  opacity: 0.5;
+}
+#zoomImg{
+  position: absolute;
+  left: 20%;
+  top: 15%;
+  width: 60%;
+  height: 70%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
