fixing potet trans

--- a/css/productosPotet.css
+++ b/css/productosPotet.css
@@ -374,3 +374,20 @@ footer>div>ul>li:hover{
     height: 450px;
   }
 }
+
+#prov{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: cadetblue;
+  transform: scale(1.5,1.5);
+}
+#prov>svg{
+
+}
+
+#pathProv{
+
+}
