Transition sot / pdf

--- a/css/productosSot.css
+++ b/css/productosSot.css
@@ -367,3 +367,25 @@ footer>div>ul>li:hover{
     height: 450px;
   }
 }
+
+
+#prov{
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  /*background: red;*/
+}
+#prov>svg{
+  position: absolute;
+  top: -100vh;
+  width: 100%;
+  opacity: 0;
+}
+#fillSvg{
+  position: absolute;
+  top: -100vh;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /*opacity: 0.5;*/
+}
