--- a/css/productosPotet.css
+++ b/css/productosPotet.css
@@ -131,11 +131,14 @@
   text-align: center;
 }
 .infoMock{
-  color: #fff;
+  color: #000;
   line-height: 1.2;
 }
 .infoMock>h2{
   font-size: 1.8rem;
+}
+.infoMock>p{
+  font-family: 'Caecilia B', sans-serif;
 }
 .slide>ul>li:nth-child(2){
   overflow: hidden;
