--- a/css/productosSot.css
+++ b/css/productosSot.css
@@ -219,14 +219,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c21e72', end
 }
 footer{
   position: absolute;
-  top: 100vh;
+  top: 95vh;
   color: #fff;
   font-size: 0.7rem;
 
   width: 100vw;
   height: 5vh;
 
-  background: #490e0e;
+  background: rgba(0,0,0,0);
   z-index: 2000;
 }
 footer>div{
@@ -234,7 +234,7 @@ footer>div{
   top: 0;
   width: 100vw;
   height: 15vh;
-  background: #490e0e;
+  background: rgba(0,0,0,0);
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
