--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -117,14 +117,19 @@ body{
   width: 50%;
   height: 390px;
   cursor: pointer;
+  overflow: hidden;
 }
 .overInfo{
   position: absolute;
-  top: 5%;
-  left: 5%;
-  width: 90%;
-  height: 90%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   opacity: 0;
+  -webkit-transition: opacity 0.8s ease-out;
+  -moz-transition: opacity 0.8s ease-out;
+  -ms-transition: opacity 0.8s ease-out;
+  -o-transition: opacity 0.8s ease-out;
   transition: opacity 0.8s ease-out;
 
   display: -webkit-box;
@@ -135,6 +140,29 @@ body{
   -webkit-flex-direction:column;
   justify-content:center;
   -webkit-justify-content:center;
+
+  align-items: center;
+  -webkit-align-items: center;
+}
+.productosBullets{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
+  -webkit-flex-direction:column;
+  justify-content: center;
+  -webkit-justify-content:center;
+  align-items: center;
+  -webkit-align-items: center;
 }
 .overInfo>h2{font-size: 1.8rem;}
 .overInfo>p{font-size: 1.2rem;}
@@ -143,22 +171,52 @@ body{
   color: #fff;
   margin-left: 20px;
   margin-bottom: 10px;
+  position: relative;
 }
 .iconMore{
+  -webkit-transition: all 0.8s ease-out;
+  -moz-transition: all 0.8s ease-out;
+  -ms-transition: all 0.8s ease-out;
+  -o-transition: all 0.8s ease-out;
   transition: all 0.8s ease-out;
 }
 .rotateIcon{
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
   transform: rotate(180deg);
 }
 .unrotateIcon{
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
   transform: rotate(0deg);
 }
 
 .imgProductoNos{
-  transition: all 0.8s ease-out;
+  -webkit-transition: all 1s ease-out;
+  -moz-transition: all 1s ease-out;
+  -ms-transition: all 1s ease-out;
+  -o-transition: all 1s ease-out;
+  transition: all 1s ease-out;
 }
 
-
+.zoomInImg{
+  -webkit-transform: scale(3,3);
+  -moz-transform: scale(3,3);
+  -ms-transform: scale(3,3);
+  -o-transform: scale(3,3);
+  transform: scale(3,3);
+}
+.zoomOutImg{
+ -webkit-transform: scale(1,1);
+ -moz-transform: scale(1,1);
+ -ms-transform: scale(1,1);
+ -o-transform: scale(1,1);
+ transform: scale(1,1);
+}
 
 
 .liImg, .liTexto{
