--- a/newHTML/css/master.css
+++ b/newHTML/css/master.css
@@ -257,7 +257,7 @@ nav.main>ul.outerMobile{
 }
 nav.main>ul.outerMobile>span{
   position: absolute;
-  top: 20%;
+  top: 10%;
   display: block;
   width: 100%;
   height: 60%;
@@ -326,7 +326,7 @@ ul#backs>li{
 #mainIndex{
   position: relative;
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - 160px);
   overflow: hidden;
 
   display: -webkit-box;
@@ -439,7 +439,7 @@ nav#interfaz{
 }
 footer.main{
   z-index: 7000;
-  position: fixed;
+  position: relative;
   width: 90vw;
   min-width: 300px;
   left: 5vw;
